# Practice

./: README.md
Algorithms/: README.md
Algorithms/LinearProgramming/Simplex/: README.md
Algorithms/Searching/BinarySearch/: BinarySearch.java  README.md
Algorithms/Sorting/InsertionSort/: InsertionSort.java  README.md
Algorithms/Sorting/MergeSort/: MergeSort.java  README.md
Algorithms/Sorting/QuickSort/: README.md
Codewars/Code/: README.md  pyproject.toml
Codewars/Code/docs/source/: conf.py  index.rst
Codewars/Code/katas/: katas.py  runner.py
Codewars/Code/katas/package_one/: module_one.py
Codewars/Code/tests/: context.py  test_poetry_template.py
Codewars/Code/tests/package_one/: test_module_one.py
Codewars/Code/tests/package_two/: test_module_two.py
CrackingTheCodingInterview/: README.md
CrackingTheCodingInterview/CTCI/: .pmd  .project  .ruleset  build.gradle  settings.gradle
CrackingTheCodingInterview/CTCI/src/main/java/arraystring/: Solver.java
CrackingTheCodingInterview/CTCI/src/main/java/dp/: Fibonacci.java  Staircase.java  package-info.java
CrackingTheCodingInterview/CTCI/src/main/java/list/: ListProblems.java  Node.java
CrackingTheCodingInterview/CTCI/src/main/java/stackqueue/: Animal.java  AnimalShelter.java  Cat.java  Dog.java  NodeMin.java  QueueViaStacks.java  SetOfStacks.java  SortStack.java  StackMin.java
CrackingTheCodingInterview/Java-Gradle/: .project  settings.gradle
Firecode/: README.md
Firecode/java_maven/: .project  pom.xml
Honeypot/: README.md
ProjectEuler/ABAP/: README.md
(+160 files in other folders)
